# Propylean

./: LICENSE  README.md  Requirements.txt  pyvenv.cfg  setup.cfg  setup.py
.github/workflows/: build-macos.yml  build-pypi-all.yml  build-pypi-macos.yml  build-pypi-ubuntu.yml  build-pypi-wibdows.yml  build-pypi-windows.yml  build-ubuntu.yml  build-windows.yml  python-package.yml
Models/: LPG_bullet_analysis.ipynb  LPG_bullet_data.csv  bullet_data.csv  pump_circuit.ipynb  storage_vessels.ipynb  test.py
productionplant/: equipments.py  instruments.py  productionplant.py  simulation.py
project_resources/: Art's Process Spec Sheets.xls  CCS-Database.xlsx  Gases-Compressed-Air-1.xlsx  Hot_Oil_Expansion_Tank.xlsx  Liquids-Pump-Curves-1.xlsx  ProcessInstrumentationandControlSystem.ppt  class_fuction_documentation.py  packaging-projects-tutorials.url  upload to pip.txt
project_resources/excel_calcs/: API520_RVsizing.xlsm  ASME_pressure_vessel_design-A.xls  Actual_firewater_Consumption.xlsx  Agitator Power Requirement and Mixing Intensity Calculation.xls  Air_Vessel_Sizing_for_Water_Hammer_Prevention_in_Pipelines.xlsx  Amine_Sweetening_Unit_Simplified_Design_Equations.xlsx  Batching of Dosing Chemicals for Boilers.xls  Chemical_Spill_Evaporation_Rate.xlsx  Compressor_Settleout_Pressure_Temperature_Estimation.xls  Equipment_Drawings.xls  Flare KOD_Rev01 (1).xls  LNG_Yields.xls  (+43 more)
propylean/: __init__.py  abstract_equipment_classes.py  constants.py  equipments.py  generic_equipment_classes.py  instruments.py  properties.py  settings.py  streams.py
tests/: pytest.ini
(+65 files in other folders)
