[metadata]
name = propylean
version = 0.1.0
author = Abhishek V Raman
author_email = 
description = The open-source calculations and analytics package for chemical process industries.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/abhishekvraman/Propylean
project_urls =
    Bug Tracker = https://github.com/abhishekvraman/Propylean/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha      
    Intended Audience :: Manufacturing
    Topic :: Scientific/Engineering :: Chemistry
    License :: OSI Approved :: MIT License

[options]
package_dir =
    = src
install_requires =
    pandas
    fluids
    thermo
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src